# pixel-agents

./: ADOPTING_THE_WORKFLOW.md  ARCHITECTURE.md  BRANCH_CHECKLIST.md  CLAUDE.md  CONTRIBUTING.md  RESOLVED.md  TODO.md  esbuild.js  package.json  tsconfig.json
client/: Cargo.toml
client/src/: agents.rs  app.rs  assets.rs  chrome.rs  focus.rs  input_queue.rs  keymap.rs  lib.rs  main.rs  raw_mode.rs  reconnect.rs  tui.rs
client/src/caps/: cache.rs  mod.rs  probe.rs
client/src/daemon/: connection.rs  discovery.rs  framing.rs  mod.rs  wire.rs
client/src/office/: catalog.rs  characters.rs  layout.rs  mod.rs  state.rs  tile_map.rs  types.rs
client/src/pty/: mod.rs
client/src/render/: b64.rs  bubbles.rs  cells.rs  char_sprites.rs  colorize.rs  iterm2.rs  kitty.rs  matrix.rs  mod.rs  outline.rs  scene.rs  sixel.rs
client/tests/: fsm_parity.rs  render_snapshots.rs
client/tests/snapshots/: render_snapshots__snapshot_empty_office.snap  render_snapshots__snapshot_matrix_despawn_midway.snap  render_snapshots__snapshot_matrix_spawn_midway.snap  render_snapshots__snapshot_permission_bubble.snap  render_snapshots__snapshot_selection_outline.snap  render_snapshots__snapshot_single_character.snap  render_snapshots__snapshot_waiting_bubble.snap
daemon/: package-lock.json  package.json  tsconfig.json  tsconfig.test.json
docs/: changes-r1-to-r2.md  changes-r2-to-r3.md  critique-r1.md  critique-r2.md  tui-architecture.md  tui-implementation-plan.md  tui-parity-checklist.md
portable-workflow-kit/: BRANCH_CHECKLIST.md  README.md  workflow.config.json
scripts/: config-reader.sh  create-feature-branch.sh  example-pre-push-hook.sh  prepare-commit.sh  setup-hooks.sh
(+92 files in other folders)
