[workspace]
members = ["."]
resolver = "2"

[package]
name = "pixel-agents-tui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pa-tui"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.30"
ratatui-crossterm = "0.1"
crossterm = { version = "0.29", features = ["event-stream"] }

# Framing / protocol
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# VTE parser (terminal sequence handling — capability probes, PTY output Phase 3)
vte = "0.15"

# Animated TUI effects (spawn/despawn matrix rain, transitions)
tachyonfx = "0.25"

# Clipboard (future: copy terminal output)
arboard = "3"

# Platform dirs (locate ~/.pixel-agents/daemon.json)
directories = "6"

# Image decoding (sixel / kitty pixel protocol, Phase 3)
image = { version = "0.25", default-features = false, features = ["png"] }

# Async stream utilities (StreamExt for crossterm EventStream)
futures-util = { version = "0.3", default-features = false, features = ["std"] }

# TOML config parsing (keymap.toml)
toml = { version = "0.8", default-features = false, features = ["parse"] }

# Error handling
anyhow = "1"

# Seeded RNG — SmallRng for deterministic simulation (parity tests Day 8-9)
rand = { version = "0.8", features = ["small_rng"] }

# wezterm-term — NOT on crates.io, deferred to Phase 3
# wezterm-term = "..."

[dev-dependencies]
# Snapshot testing for the tier × scene render matrix (Phase 3 Day 22)
insta = "1"

[profile.release]
strip = "symbols"
opt-level = 3
lto = true
codegen-units = 1
